Fixed a shift in IE

--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -210,8 +210,9 @@
     &--pro::before {
       width: 133px;
       height: 150px;
-      top: 70px;
+      top: 25px;
       left: -13px;
+      background-position: center center;
     }
   }
 
